[b][color=orange]v5.11[/color], 21.06.2022[/b][list]
[*]Fixed an error on UnitFrames Buffs/Debuffs Shadows
[*]Fixed the Flight Mode Options[/list]