@@ -79,6 +79,7 @@ module.ReminderList = {
 				["defaultIcon"] = 192106,
 			},
 			["enable"] = true,
+			-- ["combat"] = true,
 			["instance"] = true,
 			["pvp"] = true,
 			["strictFilter"] = true,
@@ -90,6 +91,7 @@ module.ReminderList = {
 				["defaultIcon"] = 52127,
 			},
 			["enable"] = true,
+			-- ["combat"] = true,
 			["instance"] = true,
 			["pvp"] = true,
 			["strictFilter"] = true,
@@ -101,6 +103,7 @@ module.ReminderList = {
 				["defaultIcon"] = 318038,
 			},
 			["enable"] = true,
+			-- ["combat"] = true,
 			["instance"] = true,
 			["pvp"] = true,
 			["strictFilter"] = true,
@@ -112,6 +115,7 @@ module.ReminderList = {
 				["defaultIcon"] = 33757,
 			},
 			["enable"] = true,
+			-- ["combat"] = true,
 			["instance"] = true,
 			["pvp"] = true,
 			["strictFilter"] = true,
