@@ -1,3 +1,10 @@
 [b][color=orange]v5.11[/color], 21.06.2022[/b][list]
-[*]Fixed an error on UnitFrames Buffs/Debuffs Shadows
-[*]Fixed the Flight Mode Options[/list]
+[*]Updated RaidMarker Code
+[*]Added Frame Strata & Frame Level Option for the Equip/SpeccBar
+[*]Added CVar: Camera FOV to the Option
+[*]Added a clickable link for the Notification in Chat
+[*]Adjust the defaults for AutoButtons
+[*]Added a Combat Indicator to the Minimap (Red Background)
+[*]Added a Spell Feedback Frame (Shows pressed Abilitys)
+[*]Every Reminder should now have his own Mover
+[*]Only show the Covenant in Tooltip if you press Shift[/list]
